--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,10 @@ hr{
   margin: 100px auto;
 }
 
+.profile-pic{
+  width: 20%;
+}
+
 .middle-container{
   padding-top: 100px;
   padding-bottom: 100px;
@@ -74,6 +78,7 @@ hr{
   bottom: 300px;
   left: 300px;
 }
+
 
 .intro{
   width: 30%;
@@ -94,6 +99,18 @@ hr{
 .skill-image2{
   width: 25%;
   float: right;
+}
+
+.skill-image3{
+  width: 17%;
+  float: left;
+  margin: 0 4% 5% 2%;
+}
+
+.skill-image4{
+  width: 25%;
+  float: right;
+  margin-left: 1%;
 }
 
 .bottom-container{
@@ -126,4 +143,74 @@ hr{
 .message-me{
   width: 30%;
   margin: auto;
+}
+
+@media (max-width: 1028px) {
+  body{
+    text-align: center;
+  }
+
+  .cloud{
+    width: 25%;
+  }
+
+  .top-cloud{
+    position: absolute;
+    top: 50px;
+    right: 100px;
+  }
+
+  .bottom-cloud{
+    position: absolute;
+    bottom: 300px;
+    left: 150px;
+  }
+
+  .mountain{
+    margin: auto;
+    width: 200%
+  }
+
+  .profile-pic{
+    width: 40%;
+  }
+
+  h1{
+    font-size: 5.5rem;
+  }
+
+  h2{
+    font-size: 3.5rem;
+  }
+
+  h3{
+    font-size: 2.5rem;
+  }
+
+  p{
+    font-size: 1.3rem;
+  }
+
+  .skill-image{
+    width: 33%;
+    float: left;
+  }
+
+  .skill-image2{
+    width: 35%;
+    float: right;
+  }
+
+  .skill-image3{
+    width:28%;
+    float: left;
+    margin: 0 4% 5% 2%;
+  }
+
+  .skill-image4{
+    width: 35%;
+    float: right;
+    margin-left: 1%;
+  }
+
 }
