--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,10 @@ p{
   line-height: 2;
 }
 
+.mountain{
+  width: 60%;
+}
+
 .breaker{
   border: dotted #EAF6F6 6px;
   border-bottom: none;
@@ -186,7 +190,7 @@ p{
 
   .mountain{
     margin: auto;
-    width: 110%
+    width: 97%
   }
 
   .profile-pic{
